# langchain

./: Build a RAG App.ipynb  Build_a_Chatbot.ipynb  Build_an_Agent.ipynb  README.md  SimpleLLM.ipynb  serve.py  vector_stores_and_retrievers.ipynb
Agents/: Agent test.ipynb  Build my agent.ipynb
Agents/.ipynb_checkpoints/: Build my agent-checkpoint.ipynb
app/chatbot/: pyproject.toml
app/gorilla/: pyproject.toml
app/multi-model/: client-request.py
app/pirate/: pyproject.toml
app/pirate/app/: server.py
app/titanic/: README.md
app/titanic/app/: server.py
client/: chat.py  chat.sh
gorilla/: README.md
gorilla/app/: server.py
how_to/: Prompt templates - 1. few_shot_examples.ipynb  Prompt templates - 2. few_shot_examples_chat.ipynb
langsmith_walkthrough/: LangSmith Walkthrough.ipynb  pyproject.toml
multi-model/: README.md  client.py  client.rest  pyproject.toml
multi-model/app/: server.py
pirate/: README.md  pyproject.toml
templates/japanese-speak/: README.md  pyproject.toml
templates/japanese-speak/japanese_speak/: __init__.py  chain.py
titanic/: Dockerfile  pyproject.toml
